--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,7 @@
 theme: jekyll-theme-minimal
 title: Welcome to the xmutt's homepage!
 description: We all are made from starstuff
+
+#kek 
+lol
+1.test
